objファイル読み込み